# pretextannotate_custom

./: MANIFEST.in  README.md  pretextannotate.py  pyproject.toml
.github/workflows/: lint.yml  release.yml
examples/: custom_context.tsv  molecule_mapping.tsv
original_scripts/: chromosome_extraction.py  pretextannotate.py
src/pretextannotate/: __init__.py  build_context.py  chromosome_extraction.py  cli.py  fetch_reports.py  processors.py
src/pretextannotate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tests/: ilDryDodo1.1.sizes
