[project]
name = "pretextannotate"
version = "0.1.0"
description = "A package to "
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Damon-Lee Pointon", email = "dp24@sanger.ac.uk"}, { name = "Karen van Niekerk"}]
keywords = [ "pretext", "png", "nbi", "genomics" ]
dependencies = [
    "pillow>=12.1.0"
]

[package.optional-dependencies]
dev = [
    "ruff>=0.11.11",
]

[project.scripts]
pretextannotate = "pretextannotate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
