[project]
name = "pretextannotate"
version = "1.1.1"
description = "A package to annotate a pretext snapshot with size and chromosome information"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Damon-Lee Pointon", email = "dp24@sanger.ac.uk"}, { name = "Karen van Niekerk", email = "kh18@sanger.ac.uk"}, { name = "Sanger-ToL"}]
keywords = [ "pretext", "png", "ncbi-api", "genomics", "bioinformatics" ]
dependencies = [
    "pillow>=12.1.0"
]

[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ruff>=0.11.11",
]

[project.scripts]
pretextannotate = "pretextannotate.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
